...
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="Luas Lahan Padi"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/luas_padii"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="21dp"
...
                            android:layout_marginLeft="16dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="Luas Lahan Jagung"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/luas_jagung"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/luas_padii"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="20dp"
...
                            android:ems="10"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="Luas Lahan Kacang Hijau "
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/luas_kacanghijau"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/luas_kacangtanah"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="20dp"
...
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="Produksi"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:id="@+id/padii"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="21dp"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <EditText
                                android:id="@+id/ton_padi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:inputType="number" />

                            <TextView
...
                            android:layout_below="@+id/tonPadi"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="Produksi"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:id="@+id/jagungg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="21dp"
                            android:layout_below="@+id/padii"
                            android:orientation="horizontal"
                            android:weightSum="4">
                            <EditText
                                android:id="@+id/ton_jagung"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:layout_weight="1"/>
                            <TextView
                                android:layout_width="match_parent"
...
                            android:ems="10"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="Produksi"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:id="@+id/hijauu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="21dp"
                            android:layout_below="@+id/tanahh"
                            android:orientation="horizontal"
                            android:weightSum="4">
                            <EditText
                                android:id="@+id/ton_kacanghijau"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:layout_weight="1"/>
                            <TextView
...
