...
                android:text="Identitas daerah"
                android:textAlignment="textEnd"
                android:textSize="30dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kabupaten"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/judul"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="21dp"
                android:theme="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/kota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nama Kabupaten/Kota"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wilayah"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/kabupaten"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="21dp"
                android:theme="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/luas_wilayah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Luas Wilayah"
                    android:inputType="number"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/penduduk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/wilayah"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="21dp"
                android:theme="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jml_penduduk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Jumlah Penduduk"
                    android:inputType="number"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/penduduk"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="18dp"
                android:theme="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jml_kk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Jumlah Kartu Keluarga"
                    android:inputType="number"
                    android:textSize="12sp" />

...
