...
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Jumlah Kendaraan Kecil (Sedan dan Motor)"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/jml_kendaraankecil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="21dp"
...
                        android:textSize="12sp"
                        android:layout_below="@+id/kendaraankecil"
                        android:text="Jumlah Kendaraan Besar (Bus dan Truk)"
                        />

                    <EditText
                        android:id="@+id/jml_kendaraanbesar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/jml_kendaraankecil"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
...
                        android:textSize="12sp"
                        android:ems="10"
                        android:layout_below="@+id/kendaraanbesar"
                        android:text="Jumlah Rumah Tangga/KK"/>

                    <EditText
                        android:id="@+id/jml_rumah_tangga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/jml_kendaraanbesar"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="16dp"
...
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Listrik Rumah Tangga"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/ed_listrik_rm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="21dp"
                        android:inputType="number" />
...
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Listrik Industri"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/ed_listrik_industri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ed_listrik_rm"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="21dp"
...
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Listrik Bangunan Sosial"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/ed_listrik_bangunanSos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ed_listrik_industri"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="21dp"
...
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Listrik Bangunan Komersial"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/ed_listrik_bangunanKom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ed_listrik_bangunanSos"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="21dp"
...
